# oakd-vio

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yaml  luxonis_docker.sh
calibration/: oakd.yaml
include/: oak_utils.hpp
src/: CMakeLists.txt  main.cpp  oak_utils.cpp
src/examples/: calibration_reader.cpp  feature_detector.cpp  save_images.cpp
src/violib/: CMakeLists.txt  Dockerfile
src/violib/calibration/: rgbd.yaml
src/violib/src/: CMakeLists.txt  bucket.cpp  bucket.h  feature.cpp  main.cpp  rgbd_standalone.h  utils.cpp  utils.h  visualOdometry.cpp  visualOdometry.h
src/violib/src/evaluate/: matrix.cpp
src/violib2/: CMakeLists.txt  Dockerfile  docker-compose.yaml
src/violib2/src/: Frame.cpp  Frame.h  camera_object.h  feature.h  rgbd_standalone.cpp  utils.cpp  utils.h  visualOdometry.cpp
src/violib2/src/evaluate/: evaluate_odometry.cpp  evaluate_odometry.h  mail.h  matrix.h
